[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/gui/CommandPanel.gd" type="Script" id=1]
[ext_resource path="res://resources/ui/unit-button-up.png" type="Texture" id=2]
[ext_resource path="res://resources/ui/unit-button-down.png" type="Texture" id=3]

[node name="BuildingPanel" type="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 52.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Hint" ]

[node name="BuildUnitButton" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 52.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
_sections_unfolded = [ "Hint", "Textures" ]

[connection signal="mouse_entered" from="BuildUnitButton" to="." method="_on_BuildUnitButton_mouse_entered"]

[connection signal="mouse_exited" from="BuildUnitButton" to="." method="_on_BuildUnitButton_mouse_exited"]

[connection signal="pressed" from="BuildUnitButton" to="." method="_on_BuildUnitButton_pressed"]


