[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/gui/CommandPanel.gd" type="Script" id=1]
[ext_resource path="res://resources/ui/buttonSquare_brown.png" type="Texture" id=2]
[ext_resource path="res://resources/ui/buttonSquare_brown_pressed.png" type="Texture" id=3]
[ext_resource path="res://resources/ui/sword-button-up.png" type="Texture" id=4]
[ext_resource path="res://resources/ui/sword-button-down.png" type="Texture" id=5]
[ext_resource path="res://resources/ui/delete-button-up.png" type="Texture" id=6]
[ext_resource path="res://resources/ui/delete-button-down.png" type="Texture" id=7]

[node name="MagePanel" type="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Hint" ]

[node name="StopButton" type="TextureButton" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 88.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
_sections_unfolded = [ "Textures" ]

[node name="PatrolButton" type="TextureButton" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_right = 134.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Focus", "Hint", "Mouse", "Textures" ]

[node name="DisbandButton" type="TextureButton" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 88.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Hint", "Textures" ]

[connection signal="pressed" from="StopButton" to="." method="_on_StopButton_pressed"]

[connection signal="pressed" from="PatrolButton" to="." method="_on_PatrolButton_pressed"]

[connection signal="pressed" from="DisbandButton" to="." method="_on_DisbandButton_pressed"]


