[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/gui/CommandPanel.gd" type="Script" id=1]
[ext_resource path="res://resources/ui/hammer-button-up.png" type="Texture" id=2]
[ext_resource path="res://resources/ui/hammer-button-down.png" type="Texture" id=3]
[ext_resource path="res://resources/ui/sword-button-up.png" type="Texture" id=4]
[ext_resource path="res://resources/ui/sword-button-down.png" type="Texture" id=5]
[ext_resource path="res://resources/ui/stuff-button-up.png" type="Texture" id=6]
[ext_resource path="res://resources/ui/stuff-button-down.png" type="Texture" id=7]

[node name="WorkerPanel" type="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 160.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Hint" ]

[node name="ConstructHouse" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 52.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Build House"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]

[node name="ConstructBarracks" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_right = 107.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Build Barracks"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]

[node name="ConstructMageTower" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 111.0
margin_right = 163.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Build Mage Tower"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]

[connection signal="mouse_entered" from="ConstructHouse" to="." method="_on_ConstructHouse_mouse_entered"]

[connection signal="pressed" from="ConstructHouse" to="." method="_on_ConstructHouse_pressed"]

[connection signal="mouse_entered" from="ConstructBarracks" to="." method="_on_ConstructBarracks_mouse_entered"]

[connection signal="pressed" from="ConstructBarracks" to="." method="_on_ConstructBarracks_pressed"]

[connection signal="mouse_entered" from="ConstructMageTower" to="." method="_on_ConstructMageTower_mouse_entered"]

[connection signal="pressed" from="ConstructMageTower" to="." method="_on_ConstructMageTower_pressed"]


